--- a/build.gradle
+++ b/build.gradle
@@ -76,3 +76,7 @@ dependencies {
     testCompile 'io.github.novacrypto:BIP32:0.0.5'
     testCompile 'io.github.novacrypto:BIP39:0.1.7'
 }
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
