--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ apply from: 'bintray.gradle'
 apply plugin: 'com.github.ben-manes.versions'
 
 group 'io.github.novacrypto'
-version '0.0.3'
+version '2018.10.06'
 
 // To upload a new version
 // ./gradlew clean build bintrayUpload -Puser=user -Pkey=APIKEY
@@ -48,10 +48,10 @@ bintray {
     publications = ['MyPublication']
     pkg {
         repo = 'BIP'
-        name = 'BIP44'
+        name = project.name
         userOrg = 'novacrypto'
         licenses = ['GPL-3.0']
-        vcsUrl = 'https://github.com/NovaCrypto/BIP44.git'
+        vcsUrl = "https://github.com/NovaCrypto/${project.name}.git"
         version {
             name = project.version
         }
@@ -71,10 +71,10 @@ compileJava {
 }
 
 dependencies {
-    compile 'io.github.novacrypto:BIP32derivation:0.0.2'
+    compile 'io.github.novacrypto:BIP32derivation:2018.10.06'
     testCompile 'junit:junit:4.12'
-    testCompile 'io.github.novacrypto:BIP32:0.0.9'
-    testCompile 'io.github.novacrypto:BIP39:0.1.9'
+    testCompile 'io.github.novacrypto:BIP32:2018.10.06'
+    testCompile 'io.github.novacrypto:BIP39:2018.10.06'
 }
 
 compileJava.options.encoding = 'UTF-8'
